fix(docs): tiles z-index to not overlay the menu anymore

--- a/packages/docs/src/scss/components/_tile.scss
+++ b/packages/docs/src/scss/components/_tile.scss
@@ -4,7 +4,6 @@
 
 .c-tile {
 	position: relative;
-	z-index: 100;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
